# posthaste

./: .env.example  .gitignore  .impeccable.md  .sops.yaml  404.html  AGENT.md  Cargo.toml  README.md  bootstrap.sh  flake.nix  index.html  justfile  mkdocs.just  mkdocs.yml  pyproject.toml  setup.sh  special.conf.toml  template.just
.claude/: settings.local.json
.claude-design/handoff/posthaste/: README.md
.github/workflows/: ci.yml  docs.yml  release.yml
CONTRIBUTION-TODO/: index.html
L0-accounts/: index.html
L0-api/: index.html
L0-branding/: index.html
L0-compose/: index.html
L0-jmap/: index.html
L0-search/: index.html
L0-sync/: index.html
L0-ui/: index.html
L1-compose/: index.html
L1-jmap/: index.html
L1-search/: index.html
L1-sync/: index.html
L1-ui/: index.html
apps/desktop/: Cargo.toml  justfile  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/site/: .dockerignore  .prettierignore  Dockerfile  README.md  eslint.config.js  index.html  justfile  nginx.conf  package.json  tsconfig.json
apps/site/src/: App.tsx  main.tsx  styles.css
apps/web/: .gitignore  README.md  justfile  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  accountDirectory.ts  automationRules.ts  desktop.ts  domainCache.ts  index.css  logger.ts  mailState.ts  mailboxRoles.tsx  messageBody.ts  queryKeys.ts  queryLanguage.ts  searchQuery.ts  surfaces.ts
apps/web/test/: automationRules.test.ts  messageBody.test.ts  queryLanguage.test.ts  searchQuery.test.ts  surfaces.test.ts
crates/: Cargo.toml  justfile
crates/jmap-core/: Cargo.toml
crates/jmap-core/src/: config.rs  lib.rs  model.rs  ports.rs  push.rs  service.rs
crates/mail-config/: Cargo.toml
crates/mail-config/src/: atomic.rs  defaults.rs  lib.rs  migration.rs  repository.rs  schema.rs
crates/mail-engine/: Cargo.toml
crates/mail-engine/src/: compose.rs  conversions.rs  lib.rs  live.rs  mock.rs  push_sse.rs  push_ws.rs  sync.rs  ws_connection.rs
crates/mail-store/: Cargo.toml
crates/mail-store/src/: db.rs  lib.rs  mutations.rs  projections.rs  query.rs  smart_mailboxes.rs
crates/posthaste-config/: Cargo.toml
crates/posthaste-config/src/: atomic.rs  defaults.rs  lib.rs  repository.rs  schema.rs
crates/posthaste-domain/: Cargo.toml
crates/posthaste-domain/src/: cache.rs  imap.rs  lib.rs  model.rs  ports.rs  push.rs  search.rs  service.rs
crates/posthaste-engine/: Cargo.toml
crates/posthaste-engine/src/: compose.rs  conversions.rs  lib.rs  live.rs  live_compose.rs  live_message.rs  live_mutation.rs  live_push.rs  live_sync.rs  mock.rs  push_sse.rs  push_ws.rs  sync.rs  ws_connection.rs
crates/posthaste-imap/: Cargo.toml
crates/posthaste-imap/src/: body.rs  compose.rs  discovery.rs  error.rs  fetch.rs  gateway.rs  idle.rs  lib.rs  mailbox.rs  message.rs  mutation.rs  smtp.rs  sync.rs
crates/posthaste-server/: Cargo.toml
crates/posthaste-server/src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  oauth.rs  push.rs  secret.rs  supervisor.rs
crates/posthaste-server/src/api/: account_support.rs  cursor_support.rs
crates/posthaste-server/tests/: automation_preview.rs  automation_rules.rs  provider_parity.rs  settings_patch.rs  stalwart_provider_parity.rs
crates/posthaste-store/: Cargo.toml
crates/posthaste-store/src/: cache.rs  db.rs  lib.rs  mutations.rs  projections.rs  query.rs  smart_mailboxes.rs
crates/uniffi-bridge/: Cargo.toml
crates/uniffi-bridge/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: api.rs  compose.rs  config.rs  db.rs  jmap.rs  lib.rs  logging.rs  main.rs  push.rs  sanitize.rs  secret.rs  supervisor.rs
crates/web-server/src/api/: account_support.rs  cursor_support.rs
dev/: Procfile.desktop  Procfile.services  Procfile.web  bootstrap.stalwart.toml
dev/overmind/: daemon-log-path.sh  launch.sh  run-daemon.sh
dev/stalwart/: config.toml  seed.sh
dev/zellij/: desktop.kdl  launch.sh  web.kdl
docs/: CONTRIBUTION-TODO.md  L0-accounts.md  L0-api.md  L0-branding.md  L0-compose.md  L0-jmap.md  L0-logging.md  L0-providers.md  L0-search.md  L0-sync.md  L0-ui.md  L0-website.md  L1-accounts.md  L1-api.md  L1-compose.md  L1-jmap.md  L1-logging.md  L1-search.md  L1-sync.md  L1-ui.md  L2-transport.md  L2-ui-visual-reference.md  index.md  justfile
docs/eph/: ISSUE-L1-local-triage.md
docs/spec/: L0-accounts.md  L0-branding.md  L0-jmap.md  L1-compose.md  L1-ui.md
docs/stylesheets/: extra.css
keys/: release-gpg-public.asc
search/: search_index.json
secrets/: oauth.yaml  release-signing.yaml
spec/: L0-accounts.md  L0-api.md  L0-bridge.md  L0-compose.md  L0-jmap.md  L0-logging.md  L0-search.md  L0-sync.md  L0-ui.md  L1-accounts.md  L1-api.md  L1-compose.md  L1-jmap.md  L1-logging.md  L1-search.md  L1-sync.md  L1-ui.md  L2-transport.md
src-tauri/: Cargo.toml  justfile  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
swift/MailClient/: Package.resolved  Package.swift
tools/dev/: Procfile.desktop  Procfile.services  Procfile.web  smoke.sh
tools/dev/logs/: query.sh
tools/dev/overmind/: launch.sh  run-daemon.sh  run-server.sh  server-log-path.sh
tools/dev/stalwart/: config.toml  generate_fixture_maildir.py  seed.sh
tools/package/: serve.sh
tools/release/: generate-signing-secrets.sh  smoke-signing-secrets.sh
web/: .gitignore  README.md  index.html  justfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  consoleCapture.ts  index.css  logger.ts  mailState.ts  mailboxRoles.tsx  main.tsx
web/src/api/: client.ts  errors.ts  types.ts
web/src/components/: ActionBar.tsx  CommandPalette.tsx  ComposeModal.tsx  ComposeOverlay.tsx  EmailFrame.tsx  MessageDetail.tsx  MessageList.tsx  MessageRow.tsx  ResizeHandle.tsx  SettingsOverlay.tsx  SettingsPanel.tsx  ShortcutReference.tsx  Sidebar.tsx  ThemeProvider.tsx  themeContext.ts
web/src/design/: applyRootTheme.ts  attributes.ts  density.ts  index.ts  theme.ts  tokens.ts
web/src/hooks/: useDaemonEvents.ts  (+4 more)
(+135 files in other folders)
