[workspace]
members = ["jmap-core", "mail-engine", "web-server"]
resolver = "2"

[workspace.dependencies]
ammonia = "4"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jmap-client = "0.4"
dotenvy = "0.15"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
