[package]
name = "mail-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
