[package]
name = "mail-config"
version = "0.1.0"
edition = "2021"

[dependencies]
mail-domain = { path = "../jmap-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
