[package]
name = "mail-jmap"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
jmap-client = { workspace = true }
mail-domain = { path = "../jmap-core" }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = "2.5.8"
