[package]
name = "mail-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
mail-domain = { path = "../jmap-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
