[package]
name = "posthaste-config"
version = "0.1.0"
edition = "2021"

[dependencies]
posthaste-domain = { path = "../posthaste-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
