[package]
name = "posthaste-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = { workspace = true }
futures-util = { workspace = true }
jmap-client = { workspace = true }
posthaste-domain = { path = "../posthaste-domain" }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5.8"
