[package]
name = "posthaste-imap"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
async-stream = "0.3"
hex = { workspace = true }
imap-client = { workspace = true }
lettre = { workspace = true }
mail-parser = { workspace = true }
posthaste-domain = { path = "../posthaste-domain" }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
