[package]
name = "posthaste-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "posthaste_server"
path = "src/lib.rs"

[[bin]]
name = "posthaste"
path = "src/main.rs"

[dependencies]
ammonia = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
axum = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
keyring = { workspace = true }
posthaste-config = { path = "../posthaste-config" }
posthaste-domain = { path = "../posthaste-domain" }
posthaste-engine = { path = "../posthaste-engine" }
posthaste-imap = { path = "../posthaste-imap" }
posthaste-store = { path = "../posthaste-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
