[package]
name = "uniffi-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mail_bridge"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
jmap-core = { path = "../jmap-core" }
mail-engine = { path = "../mail-engine" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
