[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
jmap-core = { path = "../jmap-core" }
mail-engine = { path = "../mail-engine" }
axum = { workspace = true }
tower-http = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
jmap-client = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
url = "2.5.8"
