[package]
name = "mail-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mail-daemon"
path = "src/main.rs"

[dependencies]
ammonia = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
mail-domain = { path = "../jmap-core" }
mail-jmap = { path = "../mail-engine" }
mail-store = { path = "../mail-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
